fixing slider label alignment

--- a/visualize/static/visualize/css/multilayer.css
+++ b/visualize/static/visualize/css/multilayer.css
@@ -1,7 +1,7 @@
 .multilayerslider label {
     position: absolute;
     width: 20px;
-    margin-left: -10px;
+    /* margin-left: -10px; */
     text-align: center;
     margin-top: 20px;
 }
